--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -9,7 +9,7 @@
 
 
 .hero {
-  background: url('hero.jpg') no-repeat center center fixed;
+  background: url('kumo.jpeg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -38,12 +38,15 @@ h1, h2, h3, h4, h5, h6, {
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 200;
 }
+
 .btn {
   border-radius:0;
 }
 
-
-
+body {
+  // background: url('bg.png');
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+}
 
 
 
