--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -52,16 +52,20 @@ body {
   // -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   // -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   // box-shadow: 1px 1px 2px 0 #d0d0d0;
+  margin-top: 80px;
   background: #fff;
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 10px;
-  
+
   h2, h1 {
     margin: 10px;
   }
 }
 
+.clr {
+  clear:both;
+}
 
 
 
