Added new course form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,16 @@
 <%= yield %>
 
   </div>
+
+  <br class="clr" />
+  
   <div id="footer">
     <div class="container">
       <b>Footer Here</b>
       <br />
-      <%= link_to 'Link', '#' %>
+      <%= link_to 'Teach a Course', new_instructor_course_path %>
     </div>
   </div>
-  
+
 </body>
 </html>
