--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="booyah-box col-xs-10 col-xs-offset-1">
+<div class="booyah-box col-md-4 col-md-offset-4 col-xs-10 col-xs-offset-1">
 
 
 <h2>Change your password</h2>
