--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="booyah-box col-xs-10 col-xs-offset-1">
+<div class="booyah-box col-md-4 col-md-offset-4 col-xs-10 col-xs-offset-1">
 <h2>Sign up</h2>
 <br>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
