Added courses link to the nav

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -24,7 +24,7 @@
     <br />
     <h2>I'm an illlusionist, Michael.</h2>
     <br />
-    <%= link_to 'Learn More', '#', :class => 'btn btn-success' %>
+    <%= link_to 'Learn More', courses_path, :class => 'btn btn-success' %>
   </div>
 </div>
 
