--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,6 +1,6 @@
 <br />
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1 class="text-center"><%= @course.title %></h1>
+  <h1 class="text-center"><%= current_course.title %></h1>
   <br />
   <%= link_to 'Preview As Student...', course_path(current_course), :class => 'btn btn-warning pull-right' %>
   <br class="clr" />
