--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -5,5 +5,13 @@
   <p>
     <%= current_lesson.subtitle %>
   </p>
-  <%= link_to 'Video', current_lesson.video.to_s %>
+
+  <video id="MY_VIDEO_1" class="video-js vjs-default-skin vjs-big-play-centered" controls
+   preload="auto" width="auto" height="auto" poster="/assets/black.jpg"
+   data-setup="{}">
+   <source src="<%= current_lesson.video.to_s %>" type='video/mp4'>" type='video/mp4'>
+   <source src="MY_VIDEO.webm" type='video/webm'>
+   <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+  </video>
+
 </div>
