--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -75,6 +75,21 @@ body {
   margin:10px;
 }
 
+.lesson {
+  background-color:black;
+  a {
+    color:white;
+    font-family: "Helvetica Neue",Helvetica;
+    font-weight:100;
+  }
+}
+
+.section {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 20px;
+}
+
 
 
 
