--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,12 +1,12 @@
 <br />
 
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1><%=@course.title%></h1>
-  
-  <br />
-   <div class="col-sm-4 col-xs-12 text-center">
+  <h1><%= @course.title %></h1>
+  <%= image_tag @course.image, :class => 'img-responsive' %>
+
+  <div class="col-sm-4 col-xs-12">
     <span class="label label-default">
-    <%= number_to_currency @course.cost %>
+      <%= number_to_currency @course.cost %>
     </span>
 
     <% if current_user && current_user == @course.user %>
@@ -14,20 +14,27 @@
       <br />
       <%= link_to 'Administer', instructor_course_path(@course), :class => 'btn btn-danger btn-large' %>
     <% end %>
-
   </div>
 
   <div class="col-sm-8 col-xs-12">
+    <%= @course.description %>
+  </div>
+
+  <div class="col-xs-12">
     <% @course.sections.each do |section| %>
       <div class="section">
-        <%= section.title %>
+        <h3>
+          <%= section.title %>
+        </h3>
         <% section.lessons.each do |lesson| %>
-          <div class="lesson">
-             <%= link_to lesson_path(lesson) do %>
-              <b><%= lesson.title %></b>
-              -
-              <%= lesson.subtitle %>
-            <% end %>
+          <div class="col-xs-12 col-sm-6">
+            <div class="lesson text-center">
+              <%= link_to lesson_path(lesson) do %>
+                <b><%= lesson.title %></b>
+                <br />
+                <%= lesson.subtitle %>
+              <% end %>
+            </div>
           </div>
         <% end %>
       </div>
