--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -67,6 +67,12 @@ body {
   clear:both;
 }
 
+.section {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 20px;
+}
+
 .has-error {
   color: #ff3333;
   background-color: #FFEEEE;
@@ -77,18 +83,21 @@ body {
 
 .lesson {
   background-color:black;
-  a {
+  margin: 30px;
+}
+
+.lesson a {
     color:white;
     font-family: "Helvetica Neue",Helvetica;
     font-weight:100;
-  }
 }
 
-.section {
-  border: 1px solid;
-  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  padding: 20px;
+.lesson a b {
+  font-weight: 100;
+  font-size:25px;
 }
+
+
 
 
 
