--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -22,13 +22,15 @@
 
   <div class="col-xs-12">
     <% @course.sections.each do |section| %>
-      <div class="section">
+    <br /><br />
+      <div class="section row">
         <h3>
           <%= section.title %>
         </h3>
         <% section.lessons.each do |lesson| %>
           <div class="col-xs-12 col-sm-6">
             <div class="lesson text-center">
+              <br />
               <%= link_to lesson_path(lesson) do %>
                 <b><%= lesson.title %></b>
                 <br />
@@ -37,6 +39,7 @@
             </div>
           </div>
         <% end %>
+         <br class="clr" />
       </div>
     <% end %>
   </div>
